# fudy_project

./: .gitignore  README.md
fudy/: .clang-format  CMakeLists.txt  FudyMenuBar.qml  FudyUtils.cpp  FudyUtils.h  HomeScreen.qml  MenuBar.qml  MenuBarItem.qml  WorkSpace.qml  image.qrc  main.cpp  main.qml  qml.qrc
fudy/FudyComponents/: ClickableText.qml
fudy/NoteScreen/: CMakeLists.txt  NoteScreen.qml  StickNoteController.cpp  StickNoteController.h  StickNoteModel.cpp  StickNoteModel.h
fudy/NoteScreen/Component/: DeleteItemPopup.qml  FramelessWindow.qml  FudyButton.qml  FudyPopup.qml  FudyTrayIcon.qml  NotePopup.qml  RadioButton.qml  SplitterItem.qml  StickyNote.qml  TaskItem.qml  TextWithToggle.qml  Toggle.qml
fudy/NoteScreen/note_screen/: NoteScreen.qml  NoteScreenPlugin.h  StickNoteController.cpp  StickNoteModel.cpp  StickNoteModel.h  qmldir
fudy/PlanScreen/plan_screen/: qmldir
fudy/Setting/: GeneralSetting.qml  LanguageSetting.qml  SettingPopup.qml  SyncSettingItem.qml  ThemeSetting.qml
fudy/SettingPanel/: GeneralSetting.qml  LanguageSetting.qml  SettingItem.qml  SettingPopup.qml  SyncSettingItem.qml  ThemeSetting.qml
fudy/SignInScreen/: ForgotPasswordPanel.qml  InputBox.qml  SignInPanel.qml  SignInScreen.qml  SignUpPanel.qml
fudy/StylingComponents/: CMakeLists.txt  FudyColor.cpp  FudyColor.h  FudyFont.cpp  FudyFont.h  StylingComponents.h  myColor.cpp  myColor.h  myFont.cpp  myFont.h  qmldir
fudy/TodoScreen/todo_screen/: qmldir
fudy/WorkspaceScreen/workspace_screen/: qmldir
fudy/cmake/: conanpackage.cmake
fudy/docs/: build_on_windows.md  policy.md
fudy/translations/: fudy_cn.ts  fudy_ja.ts  fudy_us.ts  fudy_vn.ts
fudy/translations/translation/: translation.cpp  translation.h
